manifests/argo/netpol-pxe-sync.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pxe-sync
  namespace: argo
spec:
  endpointSelector:
    matchLabels:
      pxe-sync: "true"
  ingressDeny:
    - fromEntities:
        - world
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toFQDNs:
        - matchName: "github.com"
        - matchName: "api.github.com"
        - matchPattern: "*.githubusercontent.com"
        - matchName: "dl-cdn.alpinelinux.org"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: seaweedfs
            app.kubernetes.io/component: filer
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "8333"
              protocol: TCP
    - toCIDR:
        - 192.168.5.240/32
      toPorts:
        - ports:
            - port: "2049"
              protocol: TCP
